# muduo-protorpc

./: .gitignore  .travis.yml  CMakeLists.txt  License  README  build.sh  protobuf-2.5.0.diff  protobuf-2.6.1.diff
examples/: CMakeLists.txt
examples/collect/: CMakeLists.txt  FileCache.h  ProcFs.cc  ProcFs.h  collect.proto  collector.cc  reader.cc  reader.py  version.cmake
examples/collect/go/: collect.pb.go
examples/collect/go/read/: read.go
examples/collect/go/sendcmd/: main.go
examples/median/: CMakeLists.txt  README  collector.cc  kth.h  kth_unittest.cc  median.proto  proto.sh  sorter.cc  sorter_cli.py
examples/nqueens/: CMakeLists.txt  client.cc  nqueens.proto  nqueens_cli.py  nqueens_cli.sh  proto.sh  server.cc
examples/nqueens/go/: nqueens.pb.go
examples/nqueens/go/nqueens-client/: client.go
examples/resolver/: CMakeLists.txt  client.cc  resolver.proto  server.cc
examples/rpc2/: CMakeLists.txt  client.cc  server.cc
examples/rpcbench2/: CMakeLists.txt  bench.cc  client.cc  echo.proto  server.cc
examples/rpcbench2/go/: echo.pb.go
examples/rpcbench2/go/bench-server/: server.go
examples/sudoku/: CMakeLists.txt  client.cc  server.cc  sudoku.proto
examples/sudoku/go/: sudoku.pb.go
examples/sudoku/go/client/: client.go
examples/sudoku/go/server/: server.go
examples/sudoku/go/sudoku-server/: server.go
examples/wordfreq/: CMakeLists.txt  control.cc  partition.h  partition_unittest.cc  wordfreq.cc  wordfreq.proto
examples/zurg/: CMakeLists.txt  TODO
examples/zurg/client/: master_pb2.py  proto.sh  rpc.py  rpc_pb2.py  rpcservice_pb2.py  slave_pb2.py  zurg_cli.py  zurg_mock_master.py
examples/zurg/client/muduo/protorpc2/: rpc2_pb2.py
examples/zurg/common/: ProtobufLog.cc  ProtobufLog.h  Util.cc  Util.h
examples/zurg/dummyload/: dummyload.cc
examples/zurg/proto/: CMakeLists.txt  master.proto  slave.proto
examples/zurg/slave/: AppManager.cc  AppManager.h  CMakeLists.txt  ChildManager.cc  ChildManager.h  GetHardwareTask.h  Heartbeat.cc  Heartbeat.h  Process.cc  Process.h  RpcClient.cc  RpcClient.h  Sink.h  SlaveApp.cc  SlaveApp.h  SlaveConfig.h  SlaveService.cc  SlaveService.h  main.cc
go/balancer/: main.go
go/muduorpc/: client.go  codec.go  rpc.pb.go  server.go
go/muduorpc/rpc2/: rpc2.pb.go
go/protoc-gen-go/: main.go
go/protoc-gen-go/genrpc/: plugin.go
java/: .classpath  .project  README  pom.xml
java/src/main/java/com/chenshuo/muduo/codec/: ProtobufDecoder.java  ProtobufEncoder.java
java/src/main/java/com/chenshuo/muduo/protorpc/: NewChannelCallback.java  RpcChannel.java  RpcChannelPiplineFactory.java  RpcClient.java  RpcDecoder.java  RpcEncoder.java  RpcMessageHandler.java  RpcPeer.java  RpcServer.java  rpc.proto
java/src/main/java/com/chenshuo/muduo/rpc/: NewChannelCallback.java  RpcChannel.java  RpcChannelPiplineFactory.java  RpcClient.java  RpcDecoder.java  RpcEncoder.java  RpcMessageHandler.java  RpcPeer.java  RpcServer.java  rpc.proto
java/src/test/java/com/chenshuo/muduo/codec/: CodecTest.java  query.proto
java/src/test/java/com/chenshuo/muduo/codec/examples/: ProtobufChannelPipelineFactory.java  Server.java
java/src/test/java/com/chenshuo/muduo/protorpc/: MockChannel.java  RpcList.java  RpcTest.java
java/src/test/java/com/chenshuo/muduo/protorpc/echo/: EchoClient.java  EchoServer.java  echo.proto
java/src/test/java/com/chenshuo/muduo/protorpc/sudoku/: Client.java  Server.java  SudokuImpl.java  sudoku.proto
java/src/test/java/com/chenshuo/muduo/rpc/: MockChannel.java  RpcTest.java
java/src/test/java/com/chenshuo/muduo/rpc/echo/: EchoClient.java  EchoServer.java
java/src/test/java/com/chenshuo/muduo/rpc/sudoku/: Client.java  Server.java  SudokuImpl.java
java/src/test/java/com/chenshuo/muduo/zurg/: SlaveClient.java  slave.proto
muduo/protorpc2/: CMakeLists.txt  RpcChannel.cc  RpcChannel.h  RpcServer.cc  RpcServer.h  RpcService.cc  RpcService.h  cpp_message.h  cpp_service.cc  cpp_service.h  gen.cc  rpc2.proto  service.h
